update manifest.json, script.js and style.css

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,12 @@
   "description": "Save your tasks and track them",
   "action": {
     "default_title": "TaskTracker",
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": "icon16.png"
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
 }
